# drip-py-pico

./: .gitignore  CMakeLists.txt  README.md  compile.sh  upload.ps1
include/: FreeRTOSConfig.h
src/: CMakeLists.txt  cell.cpp  cell.hpp  command_handler.cpp  command_handler.hpp  commands.cpp  endstop_irq_main.cpp  grid.cpp  grid.hpp  input_interface.cpp  input_interface.hpp  input_state.cpp  led.cpp  led.hpp  liquid.cpp  liquid_state.cpp  main.cpp  main_basic.cpp  motor_control.cpp  motor_control.hpp  motor_run.cpp  motor_test_main_no_RTOS.cpp  pillar.cpp  pillar.hpp  state.cpp  stepper.cpp
src/DebugTools/: CMakeLists.txt  debug.cpp  debug.h  debug_config.h
src/Motor/: CMakeLists.txt  controller.cpp  controller.h  dropper.cpp  dropper.h  gantry.cpp  gantry.h  motor_settings.h  old_stepper.cpp.txt  old_stepper.hpp.txt  stepper.cpp  stepper.h  stepper.hpp
src/motor-drivers/: stepper.cpp  stepper.hpp
src/serial/: CMakeLists.txt  reciever.cpp  sender.cpp  typer.cpp
